--- a/templates/admin/servicios.htm
+++ b/templates/admin/servicios.htm
@@ -155,6 +155,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                 <form method="POST" id="formEliminar" style="display:inline;">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                     <button type="submit" class="btn btn-danger">Eliminar Servicio</button>
                 </form>
             </div>
